# Slay-the-Spire

./: .gitignore  AGENTS.md  LICENSE  README.md  progress.md  pyproject.toml  task_plan.md
content/acts/: act1_map.json  act2_map.json
content/cards/: curses.json  ironclad_starter.json
content/encounters/: act1_basic.json  act1_bosses.json  act1_elites.json  act2_bosses.json  act2_elites.json
content/enemies/: act1_basic.json  act1_bosses.json  act1_elites.json  act2_basic.json  act2_elites.json
content/events/: act1_events.json
content/relics/: boss_relics.json  starter_relics.json
docs/archive/: 2026-03-24-sts2-research-notes.md
docs/superpowers/plans/: 2026-03-24-terminal-rich-ui-implementation.md  2026-03-24-terminal-sts2-core-implementation.md  2026-03-25-inspect-menus.md  2026-03-25-random-map-shop-rest-sts2-implementation.md  (+18 more)
src/slay_the_spire/: __init__.py
tests/app/: test_cli_textual.py  test_inspect_menus.py  test_inspect_registry.py  test_map_labels.py  test_menu_definitions.py  test_opening_session.py
tests/content/: test_registry_validation.py
tests/domain/: test_combat_flow.py  test_effect_resolver.py  test_hook_dispatcher.py  test_map_generator.py  test_state_serialization.py
tests/e2e/: test_single_act_smoke.py  test_two_act_smoke.py
tests/shared/: test_rng.py
tests/use_cases/: test_apply_reward.py  test_combat_events.py  test_enter_room.py  test_event_actions.py  test_opening_flow.py  test_play_card.py  test_potion_actions.py  test_room_recovery.py  test_save_load.py  test_shop_and_rest_actions.py  test_start_run.py
(+134 files in other folders)
