[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slay-the-spire"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.3",
]

[project.scripts]
slay-the-spire = "slay_the_spire.app.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"slay_the_spire" = ["data/content/**/*.json"]
